--- a/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
@@ -45,9 +45,27 @@
         <td>
               <button  pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success"></button>
               <span class="button-space"></span>
+              <!--sil-- openwindow-->
+              <button (click)="openModal()" pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" style="margin-left: 15px;"></button>
 
-              <button  (click)="onDelete(user.id)"  pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" style="margin-left: 15px;"></button>
             </td>
+            <div class="modal fade" tabindex="-1" [class.show]="modalOpen">
+              <!--CSS'i düzenlemezsem çalışmaz-->
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title">{{user.userName}} silinecek.</h5>
+                  </div>
+                  <div class="modal-body">
+                    <p>Silmek istediğinize emin misiniz?</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button (click)="onDelete(user.id)" pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"> </button>
+                    <button type="button" class="btn " (click)="closeModal()">İptal</button>
+                  </div>
+                </div>
+              </div>
+            </div>
               <!-- 
                 backend'den id'yi çekemediğimiz için id'yi tespit edemedi frontend kısmında :) aklımızdao lsun. swaggerda getall'da id yi çekemedik :D
               -->
